fixing search page alignment

--- a/src/scss/pages/_search.scss
+++ b/src/scss/pages/_search.scss
@@ -15,7 +15,7 @@
 	.search-options {
 		position: absolute;
 	    top: 25vh;
-	    left: 30;
+	    left: 30vw;
 	    @media (max-width: 700px) {
 		    top: 20vh;
 		    left: 25%;
